# stfu-plugin

./: .gitignore  Cargo.toml  build.rs
gui/: Cargo.toml
gui/src/: main.rs
gui/src/screens/: get_token.rs  login.rs  mod.rs
plugin/: Cargo.toml
plugin/src/: lib.rs  server.rs  util.rs
src/: lib.rs  main.rs  server.rs
src/screens/: dashboard.rs  login.rs  mod.rs
