cargo-features = ["strip"]

[package]
name = "stfu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
log = "0.4.11"
tokio = { version = "1.11.0", default-features = false, features = ["full"] }
obws = { version = "0.8.0", features = ["events"] }
dotenv = "0.15.0"
iced = { version = "0.3.0", features = ["tokio"] }
tokio-tungstenite = "0.15.0"
pretty_env_logger = "0.4.0"

[features]
debug = ["iced/debug"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
