cargo-features = ["strip"]

[package]
name = "stfu-plugin"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
cfg-if = "1.0.0"
directories-next = "2.0.0"
interprocess = "1.1.1"
log = { version = "0.4.14", features = ["max_level_trace", "release_max_level_warn", "std"] }
obs-wrapper = "0.2.2"
once_cell = "1.8.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
