[package]
name = "stfu-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-std = "1.10.0"
cfg-if = "1.0.0"
directories-next = "2.0.0"
iced = { version = "0.3.0", features = ["async-std"] }
interprocess = "1.1.1"
load-dotenv = "0.1.2"
once_cell = "1.8.0"
open = "2.0.1"
surf = { version = "2.3.1", default-features = false, features = ["h1-client", "middleware-logger", "encoding"] }
twitch_api2 = { version = "0.6.0-rc.2", features = ["pubsub", "surf_client", "helix", "trace_unknown_fields", "client"] }
twitch_oauth2 = { git = "https://github.com/Emilgardis/twitch_oauth2", version = "0.6.0-rc.2", features = ["surf_client"] }
