[package]
name = "stfu"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
cfg-if = "1.0.0"
directories-next = "2.0.0"
futures = "0.3.17"
interprocess = "1.1.1"
log = "0.4.14"
obs-wrapper = "0.2.2"
once_cell = "1.8.0"
parking_lot = "0.11.2"
tokio = { version = "1.11.0", features = ["rt", "sync"] }
untokio = { version = "0.2.1", features = ["v1"] }

[lib]
crate-type = ["cdylib"]
